Title only style

--- a/css/ucb-issue.css
+++ b/css/ucb-issue.css
@@ -75,3 +75,7 @@ img {
 .issue-content > .issue-section-content:last-child, .issue-content > .issue-section-content-feature:last-child{
     border-bottom: none;
 }
+
+.issue-section-title-only{
+    padding-bottom: 10px;
+}
