--- a/templates/content/node--ucb-issue.html.twig
+++ b/templates/content/node--ucb-issue.html.twig
@@ -24,6 +24,14 @@
             <div class="secondary-issue-image">
                 {{content.field_ucb_issue_secondary_image}}
             </div>
+            <div class="issue-content-box">
+                <div class="issue-title-box">
+                    {{label}}
+                </div>
+                <div class="issue-body-box"> 
+                {{ content.body }}
+            </div>
+            </div>
         </div>
     <div class="col-sm-8">
         {{content.field_ucb_issue_section}}
