--- a/css/ucb-current-issue-block.css
+++ b/css/ucb-current-issue-block.css
@@ -14,3 +14,9 @@
     text-align: center;
     margin-bottom: 10;
 }
+
+.ucb-current-issue-block-message{
+    display: inline;
+    margin-left: 10px;
+    font-weight: bold;
+}
