--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -193,19 +193,17 @@ pageStyleCSS
 		</div>
 	</article>
 {% else %}
-	{% if not user.hasPermission('update node') %}
-		{# redirect non-authenticated users to the specified URL #}
-		{{ content.field_ucb_article_external_url }}
-	{% else %}
-		<article{{attributes.addClass(classes)}}>
-			<div class="container ucb-article">
-				{{ label }}
-				{% set externalURL = content.field_ucb_article_external_url[0]['#url']|render|striptags|trim %}
-
-				<h2>Non-authenticated users would be redirected to :
-					<a href={{ externalURL }}>{{ externalURL }}</a>
-				</h2>
+	<article{{attributes.addClass(classes)}}>
+		<div class="container ucb-article">
+			<h1 class="ucb-article-heading">{{ label }}</h1>
+			{% set externalURL = content.field_ucb_article_external_url[0]['#url']|render|striptags|trim %}
+			<p class="fw-bold">Redirecting to: <a href="{{ externalURL }}">{{ externalURL }}</a></p>
+			{% if not user.hasPermission('update node') %}
+				{# redirect non-authenticated users to the specified URL #}
+				{{ content.field_ucb_article_external_url }}
+			{% else %}
+				<p>(Most visitors without editing permissions will be redirected from this page automatically)</p>
+			{% endif %}
 			</div>
-		</article>
-	{% endif %}
+	</article>
 {% endif %}
