Centers Issue card title link

--- a/css/ucb-latest-issue-block.css
+++ b/css/ucb-latest-issue-block.css
@@ -10,6 +10,10 @@
     margin-right: 20px;
 }
 
+.ucb-latest-issue-title{
+    text-align: center;
+}
+
 
 .ucb-latest-issue-img{
     max-height: 200px;
