--- a/css/ucb-issue-archive.css
+++ b/css/ucb-issue-archive.css
@@ -13,7 +13,11 @@
 
 .ucb-archive-card-link{
     text-align: center;
+}
+
+.ucb-archive-card-title{
     font-size: 100%;
+
 }
 
 .ucb-archive-card-img{
