--- a/css/ucb-issue.css
+++ b/css/ucb-issue.css
@@ -74,6 +74,7 @@ img {
 
 .issue-content > .issue-section-content:last-child, .issue-content > .issue-section-content-feature:last-child{
     border-bottom: none;
+    padding-bottom: 0;
 }
 
 .issue-section-title-only{
@@ -96,4 +97,8 @@ img {
     background-color: #424242;
     color: #fff;
     padding: 20px;
+}
+
+.title-thumb-article-thumbnail{
+    height: 100px;
 }
