--- a/templates/content/node--ucb-article.html.twig
+++ b/templates/content/node--ucb-article.html.twig
@@ -130,6 +130,16 @@ pageStyleCSS
 {% if not content.field_ucb_article_external_url|render %}
 	<article{{attributes.addClass(classes)}}>
 		<div class="ucb-article" itemscope itemtype="https://schema.org/Article">
+			<h1 class="sr-only">{{ label }}</h1>
+			{% if content.field_article_title_background|render %}
+				<div class="backgroundTitleDiv">
+					{{ content.field_article_title_background }}
+
+					<div class="container">
+						<h1 class="centeredTitle">{{label}}</h1>
+					</div>
+				</div>
+			{% endif %}
 			<div class="container">
 				<header role="banner" class="ucb-article-banner">
 					<h1 class="ucb-article-heading">{{ label }}</h1>
@@ -197,13 +207,15 @@ pageStyleCSS
 		<div class="container ucb-article">
 			<h1 class="ucb-article-heading">{{ label }}</h1>
 			{% set externalURL = content.field_ucb_article_external_url[0]['#url']|render|striptags|trim %}
-			<p class="fw-bold">Redirecting to: <a href="{{ externalURL }}">{{ externalURL }}</a></p>
+			<p class="fw-bold">Redirecting to:
+				<a href="{{ externalURL }}">{{ externalURL }}</a>
+			</p>
 			{% if user_can_edit %}
 				<p>(Most visitors without editing permissions will be redirected from this page automatically)</p>
 			{% else %}
 				{# redirect non-authenticated users to the specified URL #}
 				{{ content.field_ucb_article_external_url }}
 			{% endif %}
-			</div>
+		</div>
 	</article>
 {% endif %}
