--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -126,6 +126,7 @@ i.far.fa-calendar {
 .backgroundTitleDiv {
   position: relative;
   z-index: 0;
+  object-fit: fill;
 }
 
 .centeredTitle {
@@ -135,7 +136,8 @@ i.far.fa-calendar {
   color: white;
 }
 
-.backgroundTitleDiv img {
-  max-height: 600px;
+.backgroundTitleDiv > div > div > .imageMediaStyle >img {
   width: 100%;
+  max-height: 600px;
+  object-fit: cover;
 }
