--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,15 @@
     flex-grow: 0;
     flex-shrink: 0;
   }
+
+.ucb-site-affiliation-sport_club .ucb-menu-wrapper .ucb-site-name-wrapper {
+	background-image: url(../images/cu-buffs-logo.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 45px 33px;
+	padding-left: 55px;
+	min-height: 33px;
+}
   
   article img {
     max-width: 100%;
