Styling adjustments for fonts. Adjusted header elements

--- a/templates/content/node--ucb-article-list.html.twig
+++ b/templates/content/node--ucb-article-list.html.twig
@@ -260,9 +260,9 @@
 
 {# JSON API Filter logic #}
 <article {{ attributes.addClass('container') }}>
-  <h2>
+  <h1 class="ucb-article-list-header">
     {{ label }}
-  </h2>
+  </h1>
 
   <div {{ content_attributes }}>
     <div class="ucb-article-list-body">
