--- a/css/ucb-article-list.css
+++ b/css/ucb-article-list.css
@@ -1,3 +1,8 @@
+.ucb-article-list-header{
+  font-weight: normal;
+  font-size: 220%;
+}
+
 .ucb-list-msg {
   font-size: 1.25em;
   font-weight: bolder;
@@ -21,24 +26,26 @@
 }
 
 .ucb-article-card-title {
-  font-size: 1.5rem;
-  font-weight: bolder;
+  font-size: 120%;
+  font-weight: normal;
   margin-bottom: 10px;
+  line-height: 1.3;
+    margin: 0 0 10px 0;
 }
 
 .ucb-article-card-date {
-  font-size: 0.75rem;
-  line-height: 0.75rem;
+  font-size: 85%;
+  line-height: 85%;
   margin-bottom: 10px;
 }
 
-.ucb-article-card-img img{
-  width: 100%;
-  height: 100%;
+.ucb-article-card-body{
+  margin-bottom: 0;
 }
 
+
 .ucb-article-card-img {
-  width: 124px;
+  width: 100px;
   height: 100px;
 }
 
@@ -46,4 +53,5 @@
   text-transform: uppercase;
   font-weight: 600;
   font-size: 75%;
+  padding-bottom: 20px;
 }
