--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -132,19 +132,36 @@ i.far.fa-calendar {
 .centeredTitle {
   position: absolute;
   bottom: 10%;
-  color: white;
   margin-right: 15%;
+}
+
+.article-header-White{
+  color: white;
+}
+
+.article-header-Black{
+  color:black
 }
 
 .backgroundTitleDiv > div > div > .imageMediaStyle > img {
   width: 100%;
   max-height: 600px;
   object-fit: cover;
-  opacity: 75%;
 }
 
 .backgroundTitleDiv > div > div > .imageMediaStyle{
   padding-bottom: 0;
   margin-bottom: 20px;
+}
+
+.ucb-overlay-dark > div > div > .imageMediaStyle > img, 
+.ucb-overlay-light > div > div > .imageMediaStyle > img{
+  opacity: 75%;
+}
+
+.ucb-overlay-light > div > div > .imageMediaStyle{
+  background: white;
+}
+.ucb-overlay-dark > div > div > .imageMediaStyle{
   background: black;
 }
