--- a/css/ucb-article.css
+++ b/css/ucb-article.css
@@ -137,8 +137,8 @@ i.far.fa-calendar {
 
 .centeredTitle {
   position: absolute;
-  bottom: 10%;
-  margin-right: 15%;
+  bottom: 0.5em;
+  /* margin-right: 15%; */
 }
 
 .article-header-White{
@@ -170,4 +170,10 @@ i.far.fa-calendar {
 }
 .ucb-overlay-dark > div > div > .imageMediaStyle{
   background: black;
+}
+
+.ucb-article-supplemental-text{
+  margin-bottom: 1em;
+  font-style: italic;
+  font-size: 0.85em;
 }
