Fixes syntax error in the Image Gallery block template

--- a/templates/block/block--image-gallery.html.twig
+++ b/templates/block/block--image-gallery.html.twig
@@ -12,7 +12,7 @@
 
 {%
   set classes = [
-	'container'
+	'container',
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
